--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
 
         <Button
-            android:id="@+id/allow"
+            android:id="@+id/pacientButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/paciente"
@@ -23,7 +23,7 @@
             android:layout_weight="1.0" />
 
         <Button
-            android:id="@+id/deny"
+            android:id="@+id/doctorButton"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:text="@string/medico"
