--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -7,23 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <LinearLayout
+    <Button
+        android:id="@+id/updateDoctor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="15sp">
+        android:text="Atualizar Dados"
+        android:onClick="updateDoctor"
+        />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CRM:"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-        <EditText
-            android:id="@+id/crm"
-            android:inputType="number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+
 </LinearLayout>
